package vdcapi;

import "vdcapi.proto";

enum Type {
    GENERIC_RESPONSE = 1;

    VDSM_REQUEST_HELLO = 2;
    VDC_RESPONSE_HELLO = 3;

    VDSM_REQUEST_GET_PROPERTY = 4;
    VDC_RESPONSE_GET_PROPERTY = 5;

    VDSM_SEND_PING = 6;
    VDC_SEND_PONG = 7;
    VDC_SEND_ANNOUNCE = 8;
    VDC_SEND_VANISH = 9;
    VDC_SEND_PUSH_PROPERTY = 10;
    VDSM_SEND_SET_PROPERTY = 11;
    VDSM_SEND_REMOVE = 12;
    VDSM_SEND_BYE = 13;

    
    VDSM_NOTIFICATION_CALL_SCENE = 14;
    VDSM_NOTIFICATION_SAVE_SCENE = 15;
    VDSM_NOTIFICATION_UNDO_SCENE = 16;
    VDSM_NOTIFICATION_SET_LOCAL_PRIO = 17;
    VDSM_NOTIFICATION_CALL_MIN_SCENE = 18;
    VDSM_NOTIFICATION_IDENTIFY = 19;
    VDSM_NOTIFICATION_SET_CONTROL_VALUE = 20;
}

message Message {
    required Type type = 1 [ default = GENERIC_RESPONSE ];
    optional uint32 message_id = 2 [ default = 0 ];
    optional GenericResponse generic_response = 3;

    // could not be solved via extensions because protobuf-c does
    // not support extensions yet

    // requests that expect specific responses
    optional vdsm_RequestHello vdsm_request_hello = 100;
    optional vdc_ResponseHello vdc_response_hello = 101;

    optional vdsm_RequestGetProperty vdsm_request_get_property = 102;
    optional vdc_ResponseGetProperty vdc_response_get_property = 103;

    // requests that only expect a response in case of error
    optional vdsm_SendPing vdsm_send_ping = 104;
    optional vdc_SendPong vdc_send_pong = 105;
    optional vdc_SendAnnounce vdc_send_announce = 106;
    optional vdsm_SendSetProperty vdsm_send_set_property = 107;
    optional vdc_SendVanish vdc_send_vanish = 108;
    optional vdc_SendPushProperty vdc_send_push_property = 109;
    optional vdsm_SendRemove vdsm_send_remove = 110;
    optional vdsm_SendBye vdsm_send_bye = 111;

    // notifications do not expect any response, not even error responses
    optional vdsm_NotificationCallScene vdsm_send_call_scene = 112;
    optional vdsm_NotificationSaveScene vdsm_send_save_scene = 113;
    optional vdsm_NotificationUndoScene vdsm_send_undo_scene = 114;
    optional vdsm_NotificationSetLocalPrio vdsm_send_set_local_prio = 115;
    optional vdsm_NotificationCallMinScene vdsm_send_call_min_scene = 116;
    optional vdsm_NotificationIdentify vdsm_send_identify = 117;
    optional vdsm_NotificationSetControlValue vdsm_send_set_control_value = 118;
}

enum ResultCode {
    ERR_OK = 0;
    ERR_MESSAGE_UNKNOWN = 1;
    ERR_INCOMPATIBLE_API = 2;
    ERR_SERVICE_NOT_AVAILABLE = 3;
    ERR_INSUFFICIENT_STORAGE = 4;
    ERR_FORBIDDEN = 5;
    ERR_NOT_IMPLEMENTED = 6;
    ERR_NO_CONTENT_FOR_ARRAY = 7;
    ERR_INVALID_VALUE_TYPE = 8;
    ERR_MISSING_SUBMESSAGE = 9;
    ERR_MISSING_DATA = 10;
    ERR_NOT_FOUND = 11;
    ERR_NOT_AUTHORIZED = 12;
}

message GenericResponse {
    required ResultCode code = 1 [ default = ERR_OK ];
    optional string description = 2;
}
